<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wmramazan.getirhackathontask3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/date_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_range"
            android:textSize="24dp"
            android:gravity="center"

            android:onClick="pickDateRange"/>

        <EditText
            android:id="@+id/min_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_count"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/max_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_count"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/button_search_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_records"
            android:textAllCaps="false"
            android:onClick="searchRecords"/>

    </LinearLayout>

</RelativeLayout>
