<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wmramazan.getirhackathontask3.RecordsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/record_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="46dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/something_went_wrong"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/previous_page"
            android:onClick="goToPreviousPage"/>

        <TextView
            android:id="@+id/page_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="8dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/next_page"
            android:onClick="goToNextPage"/>

    </LinearLayout>

</RelativeLayout>
